# scananas

./: .gitignore  README.md  SPECS.md  TODO.md  loop.sh  package.json  tauri-llms-full.txt
app/: TODO.md  index.html  package-lock.json  package.json  tauri.conf.json
app/src/: main.tsx  state.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  model.rs
app/src/bridge/: tauri.ts
app/src/export/: canvasExport.ts
app/src/hooks/: useAutosave.ts  useCommandStack.ts
app/src/model/: types.ts
app/src/state/: commands.ts
app/src/ui/: App.tsx  AutosaveIndicator.tsx  HelpOverlay.tsx  IncrementalSearch.tsx  Inspector.tsx  RecentFiles.tsx  RecoveryDialog.tsx  SearchDialog.tsx
app/src/ui/canvas/: Canvas.tsx
app/src/ui/components/: AnimatedInteractions.tsx  FloatingActionButton.tsx  MagicalCanvas.tsx  ModernButton.tsx  ModernInspector.tsx  ModernSelect.tsx  ModernToolbar.tsx
app/src/utils/: markdown.ts  search.ts
scripts/: bootstrap.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  model.rs
