[package]
name = "fim"
version = "0.0.1"
description = "Freeform Idea Map"
authors = ["FIM Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
panic = "abort"
strip = true

